sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: Boolean does not take parameters
while (swapped()) {
              ^AlgBubbleSort1:8: error: not found: value getNombreValeur
for (i <- 0 to getNombreValeur()-2){
               ^